<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16sp"
    android:layout_marginTop="30sp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="12sp"
    tools:context=".ui.home.portfolio.PortfolioManagerFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="60dp">

        <TextView
            android:id="@+id/pmanage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Portfolio Manager"
            android:textSize="30sp" />

    </LinearLayout>

    <Button
        android:id="@+id/pmanage_delete_btn"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:backgroundTint="?attr/colorError"
        android:text="Delete Portfolio"
        android:textColor="?attr/colorOnError"
        android:visibility="gone" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="389dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pmanage_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Portfolio Name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="450dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pmanage_cash_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Portfolio Cash"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/pmanage_save_btn"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="Create"
        tools:layout_editor_absoluteY="511dp" />


</LinearLayout>